Fixing navbar overflowing footer

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1139,7 +1139,7 @@ th {
   display: none;
 }
 
-app-master-page {
+app-master-page, app-liquid-master-page {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -1147,4 +1147,8 @@ app-master-page {
   @media (min-width: 992px) {
     padding-bottom: 0px;
   }
+}
+
+app-global-footer {
+  margin-top: auto;
 }
